feat: add `postgresql_database` resource
