# internal/provider/generated/resource_postgresql_database/postgresql_database_resource_gen.go
@@ -1,0 +1,185 @@
+// Code generated by terraform-plugin-framework-generator DO NOT EDIT.
+
+package resource_postgresql_database
+
+import (
+	"context"
+	"github.com/hashicorp/terraform-plugin-framework/types"
+
+	"github.com/hashicorp/terraform-plugin-framework/resource/schema"
+)
+
+func PostgresqlDatabaseResourceSchema(ctx context.Context) schema.Schema {
+	return schema.Schema{
+		Attributes: map[string]schema.Attribute{
+			"description": schema.StringAttribute{
+				Optional:            true,
+				Computed:            true,
+				Description:         "Description of the database",
+				MarkdownDescription: "Description of the database",
+			},
+			"destination_uuid": schema.StringAttribute{
+				Optional:            true,
+				Computed:            true,
+				Description:         "UUID of the destination if the server has multiple destinations",
+				MarkdownDescription: "UUID of the destination if the server has multiple destinations",
+			},
+			"environment_name": schema.StringAttribute{
+				Required:            true,
+				Description:         "Name of the environment",
+				MarkdownDescription: "Name of the environment",
+			},
+			"image": schema.StringAttribute{
+				Optional:            true,
+				Computed:            true,
+				Description:         "Docker Image of the database",
+				MarkdownDescription: "Docker Image of the database",
+			},
+			"instant_deploy": schema.BoolAttribute{
+				Optional:            true,
+				Computed:            true,
+				Description:         "Instant deploy the database",
+				MarkdownDescription: "Instant deploy the database",
+			},
+			"is_public": schema.BoolAttribute{
+				Optional:            true,
+				Computed:            true,
+				Description:         "Is the database public?",
+				MarkdownDescription: "Is the database public?",
+			},
+			"limits_cpu_shares": schema.Int64Attribute{
+				Optional:            true,
+				Computed:            true,
+				Description:         "CPU shares of the database",
+				MarkdownDescription: "CPU shares of the database",
+			},
+			"limits_cpus": schema.StringAttribute{
+				Optional:            true,
+				Computed:            true,
+				Description:         "CPU limit of the database",
+				MarkdownDescription: "CPU limit of the database",
+			},
+			"limits_cpuset": schema.StringAttribute{
+				Optional:            true,
+				Computed:            true,
+				Description:         "CPU set of the database",
+				MarkdownDescription: "CPU set of the database",
+			},
+			"limits_memory": schema.StringAttribute{
+				Optional:            true,
+				Computed:            true,
+				Description:         "Memory limit of the database",
+				MarkdownDescription: "Memory limit of the database",
+			},
+			"limits_memory_reservation": schema.StringAttribute{
+				Optional:            true,
+				Computed:            true,
+				Description:         "Memory reservation of the database",
+				MarkdownDescription: "Memory reservation of the database",
+			},
+			"limits_memory_swap": schema.StringAttribute{
+				Optional:            true,
+				Computed:            true,
+				Description:         "Memory swap limit of the database",
+				MarkdownDescription: "Memory swap limit of the database",
+			},
+			"limits_memory_swappiness": schema.Int64Attribute{
+				Optional:            true,
+				Computed:            true,
+				Description:         "Memory swappiness of the database",
+				MarkdownDescription: "Memory swappiness of the database",
+			},
+			"name": schema.StringAttribute{
+				Optional:            true,
+				Computed:            true,
+				Description:         "Name of the database",
+				MarkdownDescription: "Name of the database",
+			},
+			"postgres_conf": schema.StringAttribute{
+				Optional:            true,
+				Computed:            true,
+				Description:         "PostgreSQL conf",
+				MarkdownDescription: "PostgreSQL conf",
+			},
+			"postgres_db": schema.StringAttribute{
+				Optional:            true,
+				Computed:            true,
+				Description:         "PostgreSQL database",
+				MarkdownDescription: "PostgreSQL database",
+			},
+			"postgres_host_auth_method": schema.StringAttribute{
+				Optional:            true,
+				Computed:            true,
+				Description:         "PostgreSQL host auth method",
+				MarkdownDescription: "PostgreSQL host auth method",
+			},
+			"postgres_initdb_args": schema.StringAttribute{
+				Optional:            true,
+				Computed:            true,
+				Description:         "PostgreSQL initdb args",
+				MarkdownDescription: "PostgreSQL initdb args",
+			},
+			"postgres_password": schema.StringAttribute{
+				Optional:            true,
+				Computed:            true,
+				Description:         "PostgreSQL password",
+				MarkdownDescription: "PostgreSQL password",
+			},
+			"postgres_user": schema.StringAttribute{
+				Optional:            true,
+				Computed:            true,
+				Description:         "PostgreSQL user",
+				MarkdownDescription: "PostgreSQL user",
+			},
+			"project_uuid": schema.StringAttribute{
+				Required:            true,
+				Description:         "UUID of the project",
+				MarkdownDescription: "UUID of the project",
+			},
+			"public_port": schema.Int64Attribute{
+				Optional:            true,
+				Computed:            true,
+				Description:         "Public port of the database",
+				MarkdownDescription: "Public port of the database",
+			},
+			"server_uuid": schema.StringAttribute{
+				Required:            true,
+				Description:         "UUID of the server",
+				MarkdownDescription: "UUID of the server",
+			},
+			"uuid": schema.StringAttribute{
+				Optional:            true,
+				Computed:            true,
+				Description:         "UUID of the database.",
+				MarkdownDescription: "UUID of the database.",
+			},
+		},
+	}
+}
+
+type PostgresqlDatabaseModel struct {
+	Description             types.String `tfsdk:"description"`
+	DestinationUuid         types.String `tfsdk:"destination_uuid"`
+	EnvironmentName         types.String `tfsdk:"environment_name"`
+	Image                   types.String `tfsdk:"image"`
+	InstantDeploy           types.Bool   `tfsdk:"instant_deploy"`
+	IsPublic                types.Bool   `tfsdk:"is_public"`
+	LimitsCpuShares         types.Int64  `tfsdk:"limits_cpu_shares"`
+	LimitsCpus              types.String `tfsdk:"limits_cpus"`
+	LimitsCpuset            types.String `tfsdk:"limits_cpuset"`
+	LimitsMemory            types.String `tfsdk:"limits_memory"`
+	LimitsMemoryReservation types.String `tfsdk:"limits_memory_reservation"`
+	LimitsMemorySwap        types.String `tfsdk:"limits_memory_swap"`
+	LimitsMemorySwappiness  types.Int64  `tfsdk:"limits_memory_swappiness"`
+	Name                    types.String `tfsdk:"name"`
+	PostgresConf            types.String `tfsdk:"postgres_conf"`
+	PostgresDb              types.String `tfsdk:"postgres_db"`
+	PostgresHostAuthMethod  types.String `tfsdk:"postgres_host_auth_method"`
+	PostgresInitdbArgs      types.String `tfsdk:"postgres_initdb_args"`
+	PostgresPassword        types.String `tfsdk:"postgres_password"`
+	PostgresUser            types.String `tfsdk:"postgres_user"`
+	ProjectUuid             types.String `tfsdk:"project_uuid"`
+	PublicPort              types.Int64  `tfsdk:"public_port"`
+	ServerUuid              types.String `tfsdk:"server_uuid"`
+	Uuid                    types.String `tfsdk:"uuid"`
+}
